<resources>
    <string name="app_name">E-Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_your_gadget">Find your \nGadget</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="login">Login</string>
    <string name="enter_email">enter email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_btn">Login</string>
    <string name="create_account">Create account</string>
    <string name="minus">-</string>
    <string name="search">Search</string>
    <string name="order_online_collect_in_store">Order online \ncollect in store</string>
    <string name="plus">+</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="wearable">Wearable</string>
    <string name="laptop">Laptop</string>
    <string name="phones">Phones</string>
    <string name="favorites">Favorites</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="free_delivery_text">Delivery for FREE until the end of the month</string>
    <string name="user_address">Address: 43 Oxford Road M13 4GR Manchester, UK</string>
    <string name="user_name">Rosina Doe</string>
    <string name="my_profile">My Profile</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="order_history">Order History</string>
    <string name="shopping_address">Shopping Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="price">Price</string>
</resources>